CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( SIFTTest )

#SET(CMAKE_CXX_COMPILER "g++")
#SET( CMAKE_BUILD_TYPE Debug  )

# 增加opencv的依赖
FIND_PACKAGE( OpenCV REQUIRED )

ADD_EXECUTABLE( sift 93_SiftAndBFMatcher.cpp )
ADD_EXECUTABLE( surf 92_FLANN_and_SURF.cpp )
ADD_EXECUTABLE( orb 95_Orb.cpp )
TARGET_LINK_LIBRARIES( sift ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES( surf ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES( orb ${OpenCV_LIBS})

